fixed flicker bug

--- a/src/components/DropDown/index.scss
+++ b/src/components/DropDown/index.scss
@@ -3,9 +3,10 @@
   width: rem(200);
   padding: rem(10) rem(10);
   border-radius: rem(15);
-  border: rem(1) solid deepskyblue;
+  border: rem(2) solid deepskyblue;
   font-size: rem(22);
   color: #666;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 
   .inner-box {
     display: flex;
@@ -40,14 +41,16 @@
   // justify-content: space-between;
   padding: rem(10) rem(10);
   border-radius: rem(15);
-  border: rem(1) solid deepskyblue;
+  border: rem(2) solid deepskyblue;
   z-index: 10;
   background-color: #fff;
   margin-left: rem(-10);
   margin-top: rem(10);
   // transform: translateY(53.5%);
   opacity: 1;
-  transition: all 0.2s linear;
+  -webkit-transition: all 0.2s linear;
+  // -webkit-perspective: 1000;
+  // -webkit-backface-visibility: hidden;
 }
 
 .unit {
@@ -59,6 +62,7 @@
 }
 
 .hide {
+  height: 0;
   display: contents;
   visibility: hidden;
   opacity: 0;
@@ -72,5 +76,6 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
